--- a/styles.css
+++ b/styles.css
@@ -1324,6 +1324,7 @@ footer div {
 
   .info-wrapper p {
     margin-bottom: 5px;
+    margin-top: 5px;
   }
 }
 
